# cuda-dev-container-template

./: .gitignore  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
csrc/: hello.cu
src/cuda_dev/: __init__.py  torch_hello.py
